Create skeleton to html, and added some styles to it. Create the js function to display the books

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Shhh, this is a library</h1>
+    <header>
+        <h1>This is a Library</h1>
+    </header>
+    <main>
+        <section class="cards-container">
+
+        </section>
+    </main>
+    <footer>
+        copyright © 2025 Emmanuel_ETM
+    </footer>
+    <script src="app.js"></script>
 </body>
 </html>
