--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Library</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8cb92f0333.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>This is a Library</h1>
     </header>
     <main>
-        <section class="cards-container">
-
-        </section>
+        <section class="cards-container"></section>
     </main>
     <footer>
-        copyright © 2025 Emmanuel_ETM
+        copyright © 2025 <a href="https://github.com/EmmanuelETM/"> | Emmanuel_ETM <i class="fa-brands fa-github"></i></a>
     </footer>
     <script src="app.js"></script>
 </body>
