--- a/index.html
+++ b/index.html
@@ -8,38 +8,48 @@
     <script src="https://kit.fontawesome.com/8cb92f0333.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <dialog id="dialog" data-modal>
+        <div class="form-container">
+            <div class="close-dialog">
+                <button class="close-button">
+                    <i class="fa-solid fa-x"></i>
+                </button>
+            </div>
+            <form action="app.js" method="post" id="form"">
+                <div class="form-inputs">
+                    <div class="left">
+                        <div>
+                            <label for="title">Title</label>
+                            <input type="text" id="title" name="title" placeholder="The Hobbit..." required>
+                        </div>
+                        <div>
+                            <label for="author">Author</label>
+                            <input type="text" id="author" name="author" placeholder="J.R.R Tolkien..." required>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div>
+                            <label for="pages">Pages</label>
+                            <input type="number" id="pages" name="pages" required>
+                        </div>
+                        <div>
+                            <label for="read">Not read yet?</label>
+                            <input type="checkbox" id="read" name="read">
+                        </div>
+                    </div>
+                </div>
+                <button class="submit" type="submit">
+                    <i class="fa-solid fa-plus"></i> Add Book
+                </button>
+            </form>
+        </div>
+    </dialog>
     <header>
         <h1>This is a Library</h1>
-        <button class="add-book">Add Book</button>
+        <button class="add-book"><i class="fa-solid fa-plus"></i> Add Book</button>
     </header>
     <main>
         <section class="cards-container"></section>
-
-        <dialog id="dialog" data-modal>
-            <p>Greetings, one and all!</p>
-            <form action="app.js" method="post" id="form"">
-                <div>
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" placeholder="The Hobbit..." required>
-                </div>
-                <div>
-                    <label for="author">Author</label>
-                    <input type="text" id="author" name="author" placeholder="J.R.R Tolkien..." required>
-                </div>
-                <div>
-                    <label for="pages">Pages</label>
-                    <input type="number" id="pages" name="pages" required>
-                </div>
-                <div>
-                    <label for="read">Not read yet?</label>
-                    <input type="checkbox" id="read" name="read">
-                </div>
-                <button class="submit" type="submit">
-                    Add Book
-                </button>
-            </form>
-        </dialog>
     </main>
     <footer>
         copyright © 2025 <a href="https://github.com/EmmanuelETM/"> | Emmanuel_ETM <i class="fa-brands fa-github"></i></a>
