Fixed problem with delete button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <input type="number" id="pages" name="pages" required>
                         </div>
                         <div>
-                            <label for="read">Not read yet?</label>
+                            <label for="read">Have Read?</label>
                             <input type="checkbox" id="read" name="read">
                         </div>
                     </div>
